# ClothSimulation

./: CMakeLists.txt  Camera.cpp  Camera.h  Cloth.cpp  Cloth.h  Color.cpp  Color.h  Hit.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  OpenGLProject  Particle.cpp  Particle.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  SpringDamper.cpp  SpringDamper.h  Triangle.cpp  Triangle.h  Unit.cpp  Unit.h  Vector.cpp  Vector.h  main.cpp  utils.cpp  utils.h
